ArgoCD/node_bach.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30081
